add integer converter and remained null module

--- a/convert_info.yml
+++ b/convert_info.yml
@@ -68,5 +68,7 @@ tables:
                   - en_upeercase
                   - blank
               - length: 40
+          - column: nice_no
+            cvt_option: rand_nice_no
 
 
